[package]
name = "mrm"
version = "0.1.0"
edition = "2024"
description = "The Narrator's Console - An absurdist AI chat companion"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.27"
ratatui = "0.26"
textwrap = "0.16"
unicode-width = "0.1"
clap = { version = "4", features = ["derive"] }
